roboshop-infra-dev/20-sg-rules/main.tf
# connection from internet to bastion

resource "aws_security_group_rule" "bastion_internet" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    #cidr_blocks = ["0.0.0.0/0"] or we can dynamically add our ip address
    #for this data.tf file add the query
    cidr_blocks = [local.my_ip]
    # which sg you are creating this rule
    security_group_id = local.bastion_sg_id
}

# connection from bastion to mongodb

resource "aws_security_group_rule" "mongodb_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # which sg you are creating this rule
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.mongodb_sg_id
}

# connection from catalogue

resource "aws_security_group_rule" "mongodb_catalogue" {
    type = "ingress"
    from_port = 27017
    to_port = 27017
    protocol = "tcp"
    #we can use either cidr or sec group
    source_security_group_id = local.catalogue_sg_id
    security_group_id = local.mongodb_sg_id
}

# connection from user

resource "aws_security_group_rule" "mongodb_user" {
    type = "ingress"
    from_port = 27017
    to_port = 27017
    protocol = "tcp"
    # which sg you are creating this rule
    source_security_group_id = local.user_sg_id
    security_group_id = local.mongodb_sg_id
}

# connection from bastion to redis

resource "aws_security_group_rule" "redis_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # which sg you are creating this rule
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.redis_sg_id
}

# connection from bastion to mysql

resource "aws_security_group_rule" "mysql_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # which sg you are creating this rule
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.mysql_sg_id
}


# connection from bastion to rabbitmq

resource "aws_security_group_rule" "rabbitmq_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # which sg you are creating this rule
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.rabbitmq_sg_id
}

# connection from bastion to backend alb

resource "aws_security_group_rule" "backend_alb_bastion" {
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.backend_alb_sg_id
}

# connection from bastion to catalogue

resource "aws_security_group_rule" "catalogue_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # which sg you are creating this rule
    source_security_group_id = local.bastion_sg_id
    security_group_id = local.catalogue_sg_id
}

# connection from backend alb to catalogue

resource "aws_security_group_rule" "catalogue_backend_alb" {
    type = "ingress"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    #we can use either cidr or sec group
    source_security_group_id = local.backend_alb_sg_id
    security_group_id = local.catalogue_sg_id
}
